Add UnitTests for example NMEA strings
* Refactoring
* Add documentation

--- a/Example/NmeaParser.xcodeproj/xcshareddata/xcschemes/NmeaParser-Example.xcscheme
+++ b/Example/NmeaParser.xcodeproj/xcshareddata/xcschemes/NmeaParser-Example.xcscheme
@@ -14,6 +14,20 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "565E1193DD925E5F18988B7BD27BD13C"
+               BuildableName = "NmeaParser.framework"
+               BlueprintName = "NmeaParser"
+               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "607FACCF1AFB9204008FA782"
                BuildableName = "NmeaParser_Example.app"
                BlueprintName = "NmeaParser_Example"
